Change ShortenInput styling to fix error message overflows

--- a/src/components/common/ShortenInput/ShortenInput.module.scss
+++ b/src/components/common/ShortenInput/ShortenInput.module.scss
@@ -2,6 +2,7 @@
 @use '../../../styles/mixins' as mixins;
 
 .component {
+  grid-area: input;
   @include mixins.btn-reset();
   border-radius: variables.$radius-small;
   padding: 12px 32px;
@@ -35,13 +36,14 @@
 }
 
 .errorMessage {
-  position: absolute;
-  bottom: 24px;
+  grid-area: message;
+  margin-bottom: -12px;
+  opacity: 0;
+  transition: opacity 0.1s ease-in-out;
 
   @include mixins.breakpoint(medium) {
-    position: static;
-    bottom: initial;
-    margin-top: -16px;
+    margin-bottom: 0;
+    margin-top: -8px;
   }
 
   span {
@@ -54,4 +56,8 @@
       font-size: 0.75rem;
     }
   }
+}
+
+.errorMessageActive {
+  opacity: 1;
 }
