--- a/src/components/features/ShortenLinks/ShortenLinks.module.scss
+++ b/src/components/features/ShortenLinks/ShortenLinks.module.scss
@@ -7,21 +7,31 @@
   background-image: url('../../../images/bg-shorten-desktop.svg');
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 50px 60px;
+  padding: 50px 60px calc(50px - 12px) 60px;
   width: 100%;
-  display: flex;
-  gap: 24px;
+  display: grid;
+  grid-template-columns: 1fr min-content;
+  grid-template-rows: auto min-content;
+  grid-template-areas:
+  'input submit'
+  'message .';
+  gap: 12px 24px;
   border-radius: variables.$radius-small;
   position: relative;
 
   @include mixins.breakpoint(medium) {
-    margin-top: -180px;
+    margin-top: -165px;
     background-image: url('../../../images/bg-shorten-mobile.svg');
     background-size: 73% 80%;
     background-position: top right;
-    flex-direction: column;
     padding: 24px;
-    gap: 20px;
+    grid-template-columns: auto;
+    grid-template-rows: auto min-content auto;
+    grid-template-areas:
+    'input'
+    'message'
+    'submit';
+    gap: 10px 0;
   }
 }
 
